create dir before fetching

--- a/.github/workflows/fetch-and-deploy.yml
+++ b/.github/workflows/fetch-and-deploy.yml
@@ -13,6 +13,7 @@ jobs:
           cmd: install
 
       - name: Fetch via Yarn 📦
+        run: mkdir output
         uses: borales/actions-yarn@v2.3.0
         with:
           cmd: fetch
