create dir before fetching try 2

--- a/.github/workflows/fetch-and-deploy.yml
+++ b/.github/workflows/fetch-and-deploy.yml
@@ -13,10 +13,13 @@ jobs:
           cmd: install
 
       - name: Fetch via Yarn 📦
-        run: mkdir output
         uses: borales/actions-yarn@v2.3.0
         with:
           cmd: fetch
+
+      - name: Create Directory 📁
+        run: |
+          mkdir output
 
       - name: Deploy 🏗
         uses: JamesIves/github-pages-deploy-action@4.1.6
