limit GH action to main branch

--- a/.github/workflows/fetch-and-deploy.yml
+++ b/.github/workflows/fetch-and-deploy.yml
@@ -1,5 +1,8 @@
 name: Fetch 🚛 and Deploy 🏗
-on: [push]
+on:
+  push:
+    branches:
+      - main
 jobs:
   fetch_and_deploy:
     runs-on: ubuntu-latest
