--- a/.github/workflows/fetch-and-deploy.yml
+++ b/.github/workflows/fetch-and-deploy.yml
@@ -26,7 +26,7 @@ jobs:
           cmd: fetch
 
       - name: Deploy 🏗
-        uses: JamesIves/github-pages-deploy-action@4.3.4
+        uses: JamesIves/github-pages-deploy-action@v4.3.4
         with:
           branch: gh-pages
           folder: output
